[package]
name = "passkey-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64ct = "1.6.0"
chia = "0.8.0"
chia-wallet-sdk = "0.8.0"
clvmr = "0.7.0"
hex = "0.4.3"
hex-literal = "0.4.1"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.61"

[patch.crates-io]
clvmr = { git = "https://github.com/Chia-Network/clvm_rs", rev = "0e12fd49da962365e409a4d889c618b854ee34b3" }
